# mcp-forge

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  TECHNICAL_ARCHITECTURE_v1.1.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: traffic_controller.py
.mcp-forge/reports/: qc_20260113_033451.json  qc_20260113_033655.json  qc_20260113_034422.json  qc_20260113_035217.json  qc_20260113_035431.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: SUMMARY.md  phase-1-PLAN.md
.planning/phases/02-test-infrastructure/: SUMMARY.md  phase-2-PLAN.md
.planning/phases/03-data-synthesis-engine/: 03-PLAN.md  RESEARCH.md  SUMMARY.md
.planning/phases/04-qc-gate-integration/: 04-PLAN.md  SUMMARY.md
.planning/phases/05-training-engine/: 05-PLAN.md  05-RESEARCH.md  SUMMARY.md
.planning/phases/06-looped-validation/: 06-PLAN.md  06-SUMMARY.md
.planning/phases/07-benchmark-suite/: 07-PLAN.md  SUMMARY.md
.planning/phases/08-gguf-export/: 08-PLAN.md  08-SUMMARY.md
.planning/phases/09-bundle-packaging/: 09-PLAN.md  09-SUMMARY.md
src/mcp_forge/: __init__.py  cli.py  config.py  state.py
src/mcp_forge/data/: __init__.py  augmenter.py  cache.py  formatter.py  qc.py  seed_generator.py  synthesizer.py
src/mcp_forge/export/: __init__.py  bundle.py  config.py  engine.py  metadata.py
src/mcp_forge/tools/: __init__.py  inspector.py
src/mcp_forge/training/: __init__.py  callbacks.py  config.py  engine.py
src/mcp_forge/validation/: __init__.py  benchmark.py  config.py  runner.py  stubs.py
tests/: conftest.py
tests/fixtures/: sample_data.jsonl  sample_tools.json
tests/integration/: test_benchmark_pipeline.py  test_bundle_pipeline.py  test_cli.py  test_export_pipeline.py  test_qc_gate.py  test_synthesis_pipeline.py  test_training_engine.py  test_validation_pipeline.py
tests/unit/: test_benchmark_config.py  test_benchmark_runner.py  test_bundle.py  test_config.py  test_export_config.py  test_export_engine.py  test_export_metadata.py  test_inspector.py  test_latency_stats.py  test_qc.py  test_state.py  test_synthesizer.py  test_training_callbacks.py  test_training_config.py  test_validation_config.py  test_validation_runner.py  test_validation_stubs.py
